# 3termPractice

./: README.md  README.txt
Bachelor's/: README.md
Course works/6 sem/code/: CMakeLists.txt  traektory.nb
Course works/6 sem/code/data/: integral_eq.nb  outMbdf2.txt  outMbdf4.txt  outMexplicitAdams.txt  outMexplicitEuler.txt  outMimplicitAdams.txt  outMimplicitEuler.txt  outMrungeKutta2.txt  outMrungeKutta4.txt  outMrungeKuttaRungeStep.txt  outMsymmetric.txt  test.txt
Course works/6 sem/code/data/y1/: outMbdf2.txt  outMbdf4.txt
Course works/6 sem/code/data/y2/: outMbdf2.txt  outMbdf4.txt
Course works/6 sem/code/data/y3/: outMbdf2.txt  outMbdf4.txt
Course works/6 sem/code/include/: SOLE.h  methods.h  nonLinearSolve.h  shared.h
Course works/6 sem/code/src/: main.cpp  methods.cpp  nonLinearSolve.cpp  shared.cpp
Diploma/: [v2] mke_course-w.nb  auto test.nb  manual - Copy.nb  manual.nb  mke-manual-2-2.nb  mke-manual-2-3.nb  mke-manual-3-2.nb  mke-manual-3-3.nb  mke_main - Copy - Copy.nb  mke_main.nb  mke_main_save.nb  mke_test_analytic.nb  mke_test_puasson - Copy - Copy - Copy - Copy - Copy.nb  mke_test_puasson - Copy - Copy - Copy.nb  mke_test_puasson - Copy - Copy.nb  mke_test_puasson - Copy.nb  mke_test_puasson.nb  new_mke - Copy.nb  pres.nb  puasson.nb  puasson_diff.nb  test.nb
Numerical analysis/LAB1/: CMakeLists.txt  inputVector.txt  outputMatrix.txt  outputVector.txt
Numerical analysis/LAB1/include/: LAB1.h  shared.h
Numerical analysis/LAB1/src/: main.cpp  shared.cpp
Practices/: README.md
RPK/sem1/lab4/: CMakeLists.txt  InTest1.txt  OutTest2.txt
(+290 files in other folders)
